Fixes playlist cutting off last song

--- a/resources/assets/less/playlist.less
+++ b/resources/assets/less/playlist.less
@@ -10,8 +10,8 @@
   height: 100%;
   margin: 0;
 }
-.playlist-songs-section:last-child {
-  margin-bottom: 1rem;
+.playlist-song-wrapper:last-child {
+  margin-bottom: 7rem;
 }
 .playlist-song-wrapper {
   display: grid;
